# mex-hal

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml
docs/: ARCHITECTURE.md
examples/: CMakeLists.txt  gpio_blink.cpp  timer_demo.cpp
include/hal/: adc.h  callback_manager.h  core.h  device_info_base.h  device_infos_types.h  file_descriptor.h  gpio.h  hal_state_engine.h  i2c.h  locker.h  pwm.h  resource_manager.h  resource_visualizer.h  spi.h  timer.h  types.h  uart.h  version.h
scripts/: check_dependencies.sh  run_reset.sh  run_tests.sh  setup_rt.sh
src/: callback_manager.cpp  core.cpp  hal_state_engine.cpp  main.cpp  resource_manager.cpp  resource_visualizer.cpp
src/adc/: adc_linux.cpp  adc_linux.h
src/device_config/: device_config.cpp  device_config.h
src/gpio/: gpio_linux.cpp  gpio_linux.h
src/i2c/: i2c_linux.cpp  i2c_linux.h
src/pwm/: pwm_linux.cpp  pwm_linux.h
src/spi/: spi_linux.cpp  spi_linux.h
src/sys_config/: sys_config.cpp  sys_config.h
src/timer/: timer_linux.cpp  timer_linux.h
src/uart/: uart_linux.cpp  uart_linux.h
tests/: CMakeLists.txt  test_adc.cpp  test_callback_manager.cpp  test_core.cpp  test_gpio.cpp  test_i2c.cpp  test_pwm.cpp  test_realtime.cpp  test_resource_manager.cpp  test_spi.cpp  test_timer.cpp  test_uart.cpp
